--- a/app/src/main/res/layout/fragment_picker.xml
+++ b/app/src/main/res/layout/fragment_picker.xml
@@ -1,12 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <Button
-        android:id="@+id/pickButton"
+        android:id="@+id/cameraButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Take a picture" />
+
+    <Button
+        android:id="@+id/galleryButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="Pick an image" />
 
-</RelativeLayout>
+</LinearLayout>
