--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -50,6 +50,15 @@
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@id/saveButton"
         android:text="Ok"/>
+
+    <Button
+        android:id="@+id/undoButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:text="Undo"/>
 </RelativeLayout>
 
 
