--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -59,6 +59,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:text="Undo"/>
+
+    <Button
+        android:id="@+id/shareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/undoButton"
+        android:text="Share"/>
 </RelativeLayout>
 
 
