--- a/app/src/main/res/layout/item_sticker_pager.xml
+++ b/app/src/main/res/layout/item_sticker_pager.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
-    android:orientation="vertical">
+    android:layout_gravity="center">
 
     <ImageView
-        android:id="@+id/sticker_image"
+        android:id="@+id/stickerImage"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_height="match_parent"
         android:scaleType="fitCenter"/>
 
-    <TextView
-        android:layout_below="@id/sticker_image"
-        android:id="@+id/sticker_name"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:singleLine="true"/>
-
-</LinearLayout>
+</FrameLayout>
